--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ header label span {
 }
 
 main {
-  margin-top: 0;
+  margin-top: 5rem;
   padding: 2rem 1.5rem;
   background: #d4d3d3;
   min-height: calc(100vh - 90px);
